--- a/css/style.css
+++ b/css/style.css
@@ -671,6 +671,14 @@ button.full-width {
     opacity: 0.8!important;
 }
 
+@media (max-width: 700px) {
+	.btn-usecase {
+	margin: 0 auto;
+	float: none!important;
+	display: block;
+}
+}
+
 .fa-sign-in-alt {
 	padding-right: 4px;
 }
